<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.login.LoginFragment">

    <ImageView
        android:id="@+id/ivMedicine"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="start"
        android:scaleType="fitXY"
        android:src="@drawable/ailehekimi"
        android:contentDescription="@string/iv_content_description"/>

    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_app_title"
        android:textColor="#56a16c"
        android:textSize="@dimen/double_extra_large_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/medium_padding"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="@dimen/extra_large_margin"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginRight="@dimen/extra_large_margin"
        android:ems="10"
        android:hint="@string/hint_et_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="@dimen/medium_padding" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="@dimen/extra_large_margin"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginRight="@dimen/extra_large_margin"
        android:ems="10"
        android:hint="@string/hint_et_password"
        android:background="@drawable/rounded_login">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/medium_padding"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/extra_large_margin"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginRight="@dimen/extra_large_margin"
        android:backgroundTint="#56a16c"
        android:padding="@dimen/medium_padding"
        android:text="@string/btn_login"
        android:background="@drawable/rounded_login"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/medium_padding">

        <TextView
            android:id="@+id/tvAsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ask"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/tv_sign_up"
            android:textColor="#56a16c" />
    </LinearLayout>

</LinearLayout>