<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.login.LoginFragment">

    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_sign_up"
        android:textColor="#56a16c"
        android:textSize="@dimen/double_extra_large_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/medium_padding"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="@dimen/extra_large_margin"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginRight="@dimen/extra_large_margin"
        android:ems="10"
        android:hint="@string/hint_et_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="@dimen/extra_large_margin"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginRight="@dimen/extra_large_margin"
        android:ems="10"
        android:hint="@string/hint_et_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="@dimen/extra_large_margin"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginRight="@dimen/extra_large_margin"
        android:ems="10"
        android:hint="@string/hint_et_weight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="@dimen/extra_large_margin"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginRight="@dimen/extra_large_margin"
        android:ems="10"
        android:hint="@string/hint_et_size">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="@dimen/extra_large_margin"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginRight="@dimen/extra_large_margin"
        android:ems="10"
        android:hint="@string/hint_et_age">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="@dimen/extra_large_margin"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginRight="@dimen/extra_large_margin"
        android:ems="10"
        android:hint="@string/hint_et_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/extra_large_margin"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginRight="@dimen/extra_large_margin"
        android:backgroundTint="#56a16c"
        android:padding="@dimen/medium_padding"
        android:text="@string/tv_sign_up"
        android:background="@drawable/rounded_login"/>
</LinearLayout>