<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.register.ContinueRegisterFragment"
    android:orientation="vertical"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tvAppTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_sign_up"
                android:textColor="#56a16c"
                android:textSize="@dimen/double_extra_large_size"
                android:padding="@dimen/medium_padding"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:ems="10"
                android:hint="@string/hint_tv_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:ems="10"
                android:hint="@string/hint_et_weight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:ems="10"
                android:hint="@string/hint_et_size">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:ems="10"
                android:hint="@string/hint_et_age">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:ems="10"
                android:hint="@string/hint_et_phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:background="@drawable/rounded_login"
                android:backgroundTint="#56a16c"
                android:padding="@dimen/small_padding"
                android:text="@string/tv_sign_up" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/medium_padding">

                <TextView
                    android:id="@+id/tvAsk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_ask"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:text="@string/tv_sign_up"
                    android:textColor="#56a16c" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>